--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,34 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+server/public/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
 .DS_Store
-server/public
-vite.config.ts.*
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Testing
+coverage/
+
+# Misc
 *.tar.gz
+*.zip
+vite.config.ts.*
