--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "rest-express",
+  "name": "healthmesh",
   "version": "1.0.0",
+  "description": "HealthMesh - Intelligent Healthcare Management Platform",
   "type": "module",
   "license": "MIT",
   "scripts": {
@@ -8,11 +9,19 @@
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
+    "lint": "eslint . --ext .ts,.tsx",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@azure/ai-form-recognizer": "^5.0.0",
+    "@azure/cosmos": "^4.2.0",
+    "@azure/identity": "^4.6.0",
+    "@azure/monitor-opentelemetry": "^1.10.0",
+    "@azure/openai": "^2.0.0",
+    "@azure/search-documents": "^12.1.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
+    "multer": "^1.4.5-lts.1",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -77,14 +86,12 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.4.4",
-    "@replit/vite-plugin-dev-banner": "^0.1.1",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
