feat: Add Azure SQL database integration and clinical agents architecture
- Configure Azure SQL Database connection for production
- Create database initialization script with multi-tenant schema
- Add hospitals, users, patients, clinical_cases, lab_reports, and risk_alerts tables
- Implement hybrid AI orchestrator for clinical workflows
- Add clinical synthesis components for multi-agent coordination
- Update Azure configuration and routes for healthcare compliance
- Fix dashboard null reference errors
- Configure MSAL redirect URI for Azure deployment
- Add comprehensive clinical agents architecture documentation

--- a/.env.azure.example
+++ b/.env.azure.example
@@ -9,16 +9,26 @@ PORT=5000
 SESSION_SECRET=your-secure-session-secret-min-32-chars
 
 # ===========================================
-# AZURE OPENAI SERVICE
+# AZURE OPENAI SERVICE / AZURE AI FOUNDRY
 # ===========================================
-# Create: Azure Portal > Azure OpenAI > Create
-# Deploy models: GPT-4o, GPT-4, or GPT-4.1
+# For Azure AI Foundry projects:
+#   1. Go to https://ai.azure.com
+#   2. Create or select a project (e.g., "HealthMesh")
+#   3. Deploy models: GPT-4o, GPT-4, or GPT-4.1
+#   4. Get the endpoint and key from project settings
+#
+# Required settings:
 AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
 AZURE_OPENAI_API_KEY=your-azure-openai-api-key
 AZURE_OPENAI_API_VERSION=2024-08-01-preview
 AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o
-# For embeddings (used in RAG)
+
+# For embeddings (used in RAG/Search)
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-ada-002
+
+# Azure AI Foundry Project (optional, for project-based management)
+AZURE_AI_FOUNDRY_RESOURCE=healthmesh-openai
+AZURE_AI_FOUNDRY_PROJECT=HealthMesh
 
 # ===========================================
 # AZURE HEALTH DATA SERVICES (FHIR)
