--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,26 @@ VITE_AZURE_AD_CLIENT_ID=your-client-id-here
 VITE_AZURE_AD_REDIRECT_URI=http://localhost:5000/login
 
 # ============================================
-# AZURE SERVICES (OPTIONAL)
+# AZURE OPENAI / AI FOUNDRY CONFIGURATION
 # ============================================
-AZURE_OPENAI_API_KEY=
-AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_DEPLOYMENT=
+# Get these from Azure AI Foundry (https://ai.azure.com) or Azure Portal
+# Required for multi-agent clinical intelligence
+
+# Azure OpenAI endpoint and key
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_OPENAI_API_KEY=your-azure-openai-api-key
+AZURE_OPENAI_API_VERSION=2024-08-01-preview
+
+# Model deployments
+AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-ada-002
+
+# Azure AI Foundry project (optional)
+AZURE_AI_FOUNDRY_RESOURCE=healthmesh-openai
+AZURE_AI_FOUNDRY_PROJECT=HealthMesh
+
+# Demo mode (set to 'true' to use mock AI responses)
+USE_DEMO_MODE=false
 
 # ============================================
 # NOTES
