fix: Configure Azure AD environment variables for authentication
- Add VITE_AZURE_AD_CLIENT_ID to build environment
- Add VITE_AZURE_AD_TENANT_ID to build environment
- Frontend will now have proper Entra ID configuration
- Fixes 'Microsoft Entra ID is not configured' error

--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -29,6 +29,8 @@ jobs:
 
     - name: 🔨 Build application
       env:
+        VITE_AZURE_AD_CLIENT_ID: 5f575598-453d-4278-8e0f-a31fb9048256
+        VITE_AZURE_AD_TENANT_ID: 0ba0de08-9840-495b-9ba1-a219de9356b8
         VITE_AZURE_AD_REDIRECT_URI: https://healthmesh-dev-app.azurewebsites.net/login
         NODE_ENV: production
       run: npm run build
