Fix QR scanning: Update patient-longitudinal service to use correct Azure SQL column names
- Fixed clinical_cases query to use existing columns (case_type, created_at, updated_at)
- Removed non-existent columns (case_number, admission_date, discharge_date, department)
- Fixed user name references to use 'name' column instead of 'first_name + last_name'
- Updated medications and conditions queries for proper column mapping
- Added QR identity system components (patient-qr-display, qr-scanner, patient-longitudinal-dashboard)
- Added QR scan page for scanning patient QR codes
- Added schema verification script for Azure SQL validation

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,20 @@ USE_DEMO_MODE=false
 # 1. AZURE_AD_TENANT_ID is NOT required for multi-tenant apps
 # 2. Make sure your App Registration is set to "Multitenant"
 # 3. Authority uses 'common' endpoint for any Azure AD org
+
+# ============================================
+# PATIENT QR IDENTITY SYSTEM
+# ============================================
+# Secure QR code generation for patient identification
+# IMPORTANT: Must be exactly 32 characters for AES-256 encryption
+
+QR_ENCRYPTION_KEY=your-32-character-encryption-key
+
+# ============================================
+# AZURE SQL DATABASE (Required for QR System)
+# ============================================
+# Configure in azure/config.ts or use environment variables
+# AZURE_SQL_SERVER=your-server.database.windows.net
+# AZURE_SQL_DATABASE=healthmesh-sql
+# AZURE_SQL_USER=your-username
+# AZURE_SQL_PASSWORD=your-password
