--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.3",
+    "jsqr": "^1.4.0",
     "jwks-rsa": "^3.2.0",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
@@ -78,6 +79,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -91,6 +93,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tedious": "^19.1.3",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.0.4",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
@@ -111,6 +114,7 @@
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
