--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,5 @@ coverage/
 # Misc
 *.tar.gz
 *.zip
-vite.config.ts.*
+vite.config.ts.*server/scripts/fix-production.ts
+server/scripts/setup-production.cjs
