fix: resolve auth race condition causing login loop
- Added 500ms delay in ProtectedRoute to allow MSAL to restore session from cache
- Check both isAuthenticated hook and direct accounts array
- Use SPA navigation (setLocation) instead of window.location.href
- Added small delay before redirect to ensure MSAL state propagates
- This fixes the issue where user was redirected back to login after auth

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ coverage/
 *.zip
 vite.config.ts.*server/scripts/fix-production.ts
 server/scripts/setup-production.cjs
+server/scripts/fix-production.ts
