--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -30,7 +30,7 @@ jobs:
         cache: 'npm'
 
     - name: 📦 Install dependencies
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - name: 🔨 Build application
       env:
@@ -41,7 +41,7 @@ jobs:
       run: npm run build
 
     - name: 📁 Install production dependencies
-      run: npm ci --production --ignore-scripts
+      run: npm ci --production --ignore-scripts --legacy-peer-deps
 
     - name: 📦 Prepare deployment package
       run: |
