--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.8",
     "@types/multer": "^1.4.12",
-    "@types/node": "20.16.11",
+    "@types/node": "^22.19.9",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/qrcode": "^1.5.6",
