--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -45,76 +45,36 @@ jobs:
 
     - name: 📦 Prepare deployment package
       run: |
-        # Create deployment directory
-        mkdir -p deploy
+        echo "📦 Preparing deployment files..."
         
-        # Copy built application
-        cp -r dist deploy/
-        cp -r node_modules deploy/
-        cp package.json deploy/
-        
-        # Copy shared folder if exists
-        if [ -d "shared" ]; then
-          cp -r shared deploy/
-        fi
-        
-        # Create simple startup script
-        cat > deploy/server.js << 'EOF'
-        // Simple startup wrapper for Azure
-        import('./dist/index.js').catch(err => {
-          console.error('Failed to start server:', err);
-          process.exit(1);
-        });
-        EOF
-        
-        # Update package.json for Azure
-        cd deploy
-        cat > package.json << 'EOF'
+        # Create a clean package.json for production
+        cat > package.json.production << 'EOF'
         {
           "name": "healthmesh",
-          "version": "1.0.0",
+          "version": "2.0.0",
           "type": "module",
           "scripts": {
-            "start": "node server.js"
+            "start": "node dist/index.js"
           },
           "engines": {
-            "node": "22.x"
+            "node": ">=22.0.0"
           }
         }
         EOF
         
-        cd ..
+        # Replace package.json with production version
+        mv package.json.production package.json
         
-        # Create zip for deployment
-        cd deploy
-        zip -r ../deploy.zip . -q
-        cd ..
-        
-        echo "✅ Deployment package created: $(du -h deploy.zip | cut -f1)"
-
-    - name: 🔐 Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        echo "✅ Deployment package ready"
+        echo "📁 Contents:"
+        ls -lh dist/ | head -10
 
     - name: 🚀 Deploy to Azure Web App
-      run: |
-        echo "🚀 Deploying to Azure App Service..."
-        az webapp deploy \
-          --resource-group HealthMesh \
-          --name ${{ env.AZURE_WEBAPP_NAME }} \
-          --src-path deploy.zip \
-          --type zip \
-          --async false \
-          --timeout 600
-        
-        echo "⏳ Waiting for deployment to stabilize..."
-        sleep 30
-        
-        echo "✅ Restarting app..."
-        az webapp restart \
-          --resource-group HealthMesh \
-          --name ${{ env.AZURE_WEBAPP_NAME }}
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: .
 
     - name: ✅ Deployment complete
       run: |
@@ -122,8 +82,11 @@ jobs:
         echo "🌐 Application URL: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net"
         echo "⏰ Deployed at: $(date)"
         
+        # Wait for app to start
+        echo "⏳ Waiting for app to start..."
+        sleep 15
+        
         # Test if app is responding
         echo "🔍 Testing application..."
-        sleep 10
-        curl -f -s -o /dev/null -w "HTTP Status: %{http_code}\n" https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net || true
+        curl -I https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net || echo "App starting..."
 
