fix(deploy): Fix package structure for Azure Web Apps Deploy
🔧 ROOT CAUSE FIXED:
The deployment was failing because:
1. package: '.' pointed to root directory with build artifacts
2. Action couldn't detect runtime OS from messy structure
3. Error: "ENOTDIR: not dir, scandir package"

✅ SOLUTION:
- Created dedicated deploy-package/ folder
- Copy ONLY required files: dist/, node_modules/, shared/
- Clean package.json with proper main entry point
- Added web.config for Azure App Service routing
- Point deployment to clean folder: package: ./deploy-package

📝 WHAT'S FIXED:
- Proper package structure Azure expects
- Runtime OS detection will now work
- Clean separation of build vs deploy
- IIS/Azure routing configured via web.config

🎯 DEPLOYMENT STRUCTURE:
deploy-package/
├── dist/           # Built application
├── node_modules/   # Dependencies
├── shared/         # Shared code (if exists)
├── package.json    # Production config with main entry
└── web.config      # Azure routing configuration

The package parameter now correctly points to ./deploy-package
which has a clean, predictable structure Azure can work with.

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -45,36 +45,83 @@ jobs:
 
     - name: 📦 Prepare deployment package
       run: |
-        echo "📦 Preparing deployment files..."
+        echo "📦 Creating deployment package..."
         
-        # Create a clean package.json for production
-        cat > package.json.production << 'EOF'
+        # Create deployment folder
+        mkdir -p deploy-package
+        
+        # Copy only what's needed
+        cp -r dist deploy-package/
+        cp -r node_modules deploy-package/
+        
+        # Copy shared if exists
+        if [ -d "shared" ]; then
+          cp -r shared deploy-package/
+        fi
+        
+        # Create production package.json
+        cat > deploy-package/package.json << 'EOF'
         {
           "name": "healthmesh",
           "version": "2.0.0",
           "type": "module",
+          "main": "dist/index.js",
           "scripts": {
             "start": "node dist/index.js"
           },
           "engines": {
-            "node": ">=22.0.0"
+            "node": "22.x",
+            "npm": ">=10.0.0"
           }
         }
         EOF
         
-        # Replace package.json with production version
-        mv package.json.production package.json
+        # Create web.config for Azure (optional but helps)
+        cat > deploy-package/web.config << 'EOF'
+        <?xml version="1.0" encoding="utf-8"?>
+        <configuration>
+          <system.webServer>
+            <handlers>
+              <add name="iisnode" path="dist/index.js" verb="*" modules="iisnode"/>
+            </handlers>
+            <rewrite>
+              <rules>
+                <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
+                  <match url="^dist/index.js\/debug[\/]?" />
+                </rule>
+                <rule name="StaticContent">
+                  <action type="Rewrite" url="public{REQUEST_URI}"/>
+                </rule>
+                <rule name="DynamicContent">
+                  <conditions>
+                    <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
+                  </conditions>
+                  <action type="Rewrite" url="dist/index.js"/>
+                </rule>
+              </rules>
+            </rewrite>
+            <security>
+              <requestFiltering>
+                <hiddenSegments>
+                  <remove segment="bin"/>
+                </hiddenSegments>
+              </requestFiltering>
+            </security>
+            <httpErrors existingResponse="PassThrough" />
+          </system.webServer>
+        </configuration>
+        EOF
         
         echo "✅ Deployment package ready"
-        echo "📁 Contents:"
-        ls -lh dist/ | head -10
+        echo "📁 Package structure:"
+        ls -lh deploy-package/ | head -15
 
     - name: 🚀 Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: .
+        package: ./deploy-package
 
     - name: ✅ Deployment complete
       run: |
