fix: Fix .dockerignore to include scripts for build
Excluding 'scripts' caused 'npm run build' to fail silently
because 'tsx script/build.ts' couldn't find the script.
This resulted in missing 'dist' folder and container crash.

Now including scripts folder in Docker context.

--- a/.dockerignore
+++ b/.dockerignore
@@ -70,9 +70,8 @@ temp
 *.tar.gz
 *.rar
 
-# Scripts (not needed in production)
-scripts
-!scripts/build.ts
+# Scripts - keep build script!
+# scripts folder is NEEDED for npm run build
 
 # Development files
 docker-compose*.yml
